网关微服务平台初始化-调整代码，公用基类，增加乐观锁版本号